--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.android.support:design:25.0.1'
     compile 'io.github.yavski:fab-speed-dial:1.0.6'
     compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.github.GrenderG:Color-O-Matic:1.1.3'
     testCompile 'junit:junit:4.12'
 }
