--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'io.github.yavski:fab-speed-dial:1.0.6'
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.github.GrenderG:Color-O-Matic:1.1.3'
+    compile 'com.github.thorbenprimke:realm-recyclerview:0.9.25'
     testCompile 'junit:junit:4.12'
 }
