--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         applicationId "stoyanov.valentin.mycar"
         minSdkVersion 19
         targetSdkVersion 25
+        vectorDrawables.useSupportLibrary = true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -29,7 +30,6 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'io.github.yavski:fab-speed-dial:1.0.6'
     compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.github.GrenderG:Color-O-Matic:1.1.3'
     compile 'com.github.thorbenprimke:realm-recyclerview:0.9.25'
     testCompile 'junit:junit:4.12'
