--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.github.GrenderG:Color-O-Matic:1.1.3'
     compile 'com.github.thorbenprimke:realm-recyclerview:0.9.25'
+    compile 'io.realm:android-adapters:1.4.0'
     testCompile 'junit:junit:4.12'
 }
