--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,9 @@ dependencies {
     compile 'com.android.support:design:25.1.0'
     compile 'io.github.yavski:fab-speed-dial:1.0.6'
     compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.github.GrenderG:Color-O-Matic:1.1.3'
     compile 'com.github.thorbenprimke:realm-recyclerview:0.9.25'
     compile 'io.realm:android-adapters:1.4.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.thebluealliance:spectrum:0.7.1'
     testCompile 'junit:junit:4.12'
 }
