--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'io.github.yavski:fab-speed-dial:1.0.6'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.github.thorbenprimke:realm-recyclerview:0.9.25'
     compile 'io.realm:android-adapters:1.4.0'
