--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'io.github.yavski:fab-speed-dial:1.0.6'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+    compile 'com.github.PhilJay:MPAndroidChart-Realm:v2.0.2@aar'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.0'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.github.thorbenprimke:realm-recyclerview:0.9.25'
     compile 'io.realm:android-adapters:1.4.0'
