--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+
+    //compile 'io.palaima:smoothbluetooth:0.1.0'
+    //compile 'com.github.DeveloperPaul123:SimpleBluetoothLibrary:1.5.1'
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'io.github.yavski:fab-speed-dial:1.0.6'
@@ -35,6 +38,8 @@ dependencies {
     compile 'io.realm:android-adapters:1.4.0'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.thebluealliance:spectrum:0.7.1'
-    compile 'io.palaima:smoothbluetooth:0.1.0'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
+    compile 'com.akexorcist:bluetoothspp:1.0.0'
+    compile 'com.android.support:support-v4:25.1.0'
     testCompile 'junit:junit:4.12'
 }
