--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ dependencies {
 
     //compile 'io.palaima:smoothbluetooth:0.1.0'
     //compile 'com.github.DeveloperPaul123:SimpleBluetoothLibrary:1.5.1'
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:design:25.1.1'
     compile 'io.github.yavski:fab-speed-dial:1.0.6'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
     compile 'com.github.thorbenprimke:realm-recyclerview:0.9.25'
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.thebluealliance:spectrum:0.7.1'
     compile 'com.google.firebase:firebase-ads:10.0.1'
     compile 'com.akexorcist:bluetoothspp:1.0.0'
-    compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.sromku:simple-storage:1.2.0'
     testCompile 'junit:junit:4.12'
 }
