--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".app.MyApplication"
@@ -35,10 +36,6 @@
         <activity
             android:name=".activities.NewExpenseActivity"
             android:label="@string/title_activity_new_expense"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".activities.NewReminderActivity"
-            android:label="@string/title_activity_new_reminder"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.NewRefuelingActivity"
@@ -86,6 +83,16 @@
         <service
             android:name=".services.BootIntentService"
             android:exported="false"/>
+
+       <!-- <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="stoyanov.valentin.mycar.fileprovider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>-->
     </application>
 
 </manifest>
