--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        pickFirst 'META-INF/LICENSE.txt'
+        pickFirst 'META-INF/NOTICE.txt'
+        pickFirst 'META-INF/INDEX.LIST'
+    }
 }
 
 dependencies {
@@ -42,5 +47,7 @@ dependencies {
     compile 'com.akexorcist:bluetoothspp:1.0.0'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.sromku:simple-storage:1.2.0'
+
+    compile 'eu.hgross:blaubot-android:2.0.0-beta.2'
     testCompile 'junit:junit:4.12'
 }
