Fuel Price statistics

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="stoyanov.valentin.mycar">
 
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
@@ -68,16 +67,11 @@
             android:name=".broadcasts.NotificationReceiver"
             android:enabled="true"
             android:exported="false" />
-        <receiver android:name=".broadcasts.BootReceiver"
-            android:enabled="true"
-            android:exported="false">
+        <receiver android:name=".broadcasts.BootReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
-        <service
-            android:name=".services.ResetAlarmManagerService"
-            android:enabled="true"
-            android:exported="false"/>
+        <service android:name=".services.ResetAlarmManagerService" />
     </application>
 </manifest>
